src/test/ui/mismatched_types/overloaded-calls-bad.stderr
error[E0308]: mismatched types
  --> $DIR/overloaded-calls-bad.rs:38:17
   |
LL |     let ans = s("what");    //~ ERROR mismatched types
   |                 ^^^^^^ expected isize, found reference
   |
   = note: expected type `isize`
              found type `&'static str`

error[E0057]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/overloaded-calls-bad.rs:39:15
   |
LL |     let ans = s();
   |               ^^^ expected 1 parameter

error[E0057]: this function takes 1 parameter but 2 parameters were supplied
  --> $DIR/overloaded-calls-bad.rs:41:15
   |
LL |     let ans = s("burma", "shave");
   |               ^^^^^^^^^^^^^^^^^^^ expected 1 parameter

error: aborting due to 3 previous errors

You've got a few errors: E0057, E0308
If you want more information on an error, try using "rustc --explain E0057"
